airflow/logs/dag_id=btcusdt_data_ingestion/run_id=manual__2024-10-15T22:22:42.420774+00:00/task_id=ingest_btcusdt/% if ti.map_index >= 0 %map_index=-1/% endif %attempt=2.log
[2024-10-15T22:27:48.771+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:27:48.787+0000] {__init__.py:51} DEBUG - Loading core task runner: StandardTaskRunner
[2024-10-15T22:27:48.803+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:27:48.807+0000] {base_task_runner.py:68} DEBUG - Planning to run as the  user
[2024-10-15T22:27:48.810+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> from DB
[2024-10-15T22:27:48.830+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Task Instance Not Running' PASSED: True, Task is not in running state.
[2024-10-15T22:27:48.830+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Not In Retry Period' PASSED: True, The task instance was not marked for retrying.
[2024-10-15T22:27:48.830+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Task Instance State' PASSED: True, Task state queued was valid.
[2024-10-15T22:27:48.831+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Previous Dagrun State' PASSED: True, The task did not have depends_on_past set.
[2024-10-15T22:27:48.839+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]>
[2024-10-15T22:27:48.839+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Not In Retry Period' PASSED: True, The task instance was not marked for retrying.
[2024-10-15T22:27:48.840+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Previous Dagrun State' PASSED: True, The task did not have depends_on_past set.
[2024-10-15T22:27:48.840+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Task Concurrency' PASSED: True, Task concurrency is not set.
[2024-10-15T22:27:48.849+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Pool Slots Available' PASSED: True, There are enough open slots in default_pool to execute the task
[2024-10-15T22:27:48.849+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]>
[2024-10-15T22:27:48.849+0000] {taskinstance.py:1308} INFO - Starting attempt 2 of 2
[2024-10-15T22:27:48.862+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): ingest_btcusdt> on 2024-10-15 22:22:42.420774+00:00
[2024-10-15T22:27:48.866+0000] {standard_task_runner.py:57} INFO - Started process 164 to run task
[2024-10-15T22:27:48.870+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'btcusdt_data_ingestion', 'ingest_btcusdt', 'manual__2024-10-15T22:22:42.420774+00:00', '--job-id', '5', '--raw', '--subdir', 'DAGS_FOLDER/ingest_btcusdt_data.py', '--cfg-path', '/tmp/tmpgq8l19mj']
[2024-10-15T22:27:48.873+0000] {standard_task_runner.py:85} INFO - Job 5: Subtask ingest_btcusdt
[2024-10-15T22:27:48.874+0000] {cli_action_loggers.py:65} DEBUG - Calling callbacks: [<function default_action_log at 0x7fd2bbbf7550>]
[2024-10-15T22:27:48.932+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:27:48.936+0000] {task_command.py:410} INFO - Running <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [running]> on host d867809303f2
[2024-10-15T22:27:48.937+0000] {settings.py:353} DEBUG - Disposing DB connection pool (PID 164)
[2024-10-15T22:27:48.937+0000] {settings.py:212} DEBUG - Setting up DB connection pool (PID 164)
[2024-10-15T22:27:48.938+0000] {settings.py:285} DEBUG - settings.prepare_engine_args(): Using NullPool
[2024-10-15T22:27:48.940+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [running]> from DB
[2024-10-15T22:27:48.981+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:27:48.982+0000] {taskinstance.py:868} DEBUG - Clearing XCom data
[2024-10-15T22:27:49.029+0000] {retries.py:80} DEBUG - Running RenderedTaskInstanceFields._do_delete_old_records with retries. Try 1 of 3
[2024-10-15T22:27:49.047+0000] {taskinstance.py:1545} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='btcusdt_data_ingestion' AIRFLOW_CTX_TASK_ID='ingest_btcusdt' AIRFLOW_CTX_EXECUTION_DATE='2024-10-15T22:22:42.420774+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-15T22:22:42.420774+00:00'
[2024-10-15T22:27:49.047+0000] {__init__.py:117} DEBUG - Preparing lineage inlets and outlets
[2024-10-15T22:27:49.048+0000] {__init__.py:155} DEBUG - inlets: [], outlets: []
[2024-10-15T22:27:49.058+0000] {base.py:73} INFO - Using connection ID 'company_dw' for task execution.
[2024-10-15T22:27:49.101+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/ingest_btcusdt_data.py", line 56, in ingest_csv_to_postgres
    cursor.execute(create_table_query)
psycopg2.errors.SyntaxError: syntax error at or near "TEXT"
LINE 3:         Open Time TEXT, Open TEXT, High TEXT, Low TEXT, Clos...
                          ^

[2024-10-15T22:27:49.104+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [running]> from DB
[2024-10-15T22:27:49.116+0000] {taskinstance.py:2305} DEBUG - Task Duration set to 0.276864
[2024-10-15T22:27:49.118+0000] {taskinstance.py:1356} DEBUG - Clearing next_method and next_kwargs.
[2024-10-15T22:27:49.118+0000] {taskinstance.py:1345} INFO - Marking task as FAILED. dag_id=btcusdt_data_ingestion, task_id=ingest_btcusdt, execution_date=20241015T222242, start_date=20241015T222748, end_date=20241015T222749
[2024-10-15T22:27:49.133+0000] {cli_action_loggers.py:83} DEBUG - Calling callbacks: []
[2024-10-15T22:27:49.134+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 5 for task ingest_btcusdt (syntax error at or near "TEXT"
LINE 3:         Open Time TEXT, Open TEXT, High TEXT, Low TEXT, Clos...
                          ^
; 164)
[2024-10-15T22:27:49.172+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2024-10-15T22:27:49.200+0000] {dagrun.py:697} DEBUG - number of tis tasks for <DagRun btcusdt_data_ingestion @ 2024-10-15 22:22:42.420774+00:00: manual__2024-10-15T22:22:42.420774+00:00, state:running, queued_at: 2024-10-15 22:22:42.445085+00:00. externally triggered: True>: 0 task(s)
[2024-10-15T22:27:49.201+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
